feature(bookings): Admin can see all bookings while a user can only see his bookings [Started #167734197]
