# server/api/controllers/bookings/router.js
@@ -7,4 +7,5 @@ import {
 } from '../../middlewares/validators';
 
 export default express.Router()
-  .post('/', [validateAuthToken, validatePermission('user'), validateCreateBookingInputs], controller.bookTrip);
+  .post('/', [validateAuthToken, validatePermission('user'), validateCreateBookingInputs], controller.bookTrip)
+  .get('/', [validateAuthToken], controller.showBookings)
