# server/api/services/bookings.service.js
@@ -76,6 +76,51 @@ class BookingsService {
       }
     });
   }
+
+  all(email) {
+    L.info(bookings, 'fetch all bookings');
+
+    const loggedUser = users.filter(u => u.email === email)[0];
+
+    const bookings$ = [];
+
+    const bookingList = loggedUser.is_admin ? bookings : bookings.filter(b => b.user_id === loggedUser.id);
+
+    if (bookingList.length) {
+
+      bookingList.forEach(b => {
+
+        const bookingUser = users.filter(u => u.id === b.user_id)[0];
+        const bookingTrip = trips.filter(t => t.id === b.trip_id)[0];
+
+        const booking$ = {
+          booking_id: b.id,
+          bus_license_number: bookingTrip.bus_license_number,
+          trip_date: bookingTrip.trip_date,
+          first_name: bookingUser.first_name,
+          last_name: bookingUser.last_name,
+          user_email: bookingUser.email,
+        };
+
+        bookings$.push(booking$);
+      });
+
+      return Promise.resolve({
+        code: Constants.response.ok, // 200
+        response: {
+          status: 'success',
+          data: bookings$
+        }
+      });
+    }
+    return Promise.reject({
+      code: Constants.response.notFound, // 404
+      response: {
+        status: 'error',
+        data: 'No booking found!'
+      }
+    });
+  }
 }
 
 export default new BookingsService();
